k8s/tenants/base/kube-guardian/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: xdp-log
  labels:
    toolkit.fluxcd.io/tenant: kube-guardian
    kustomize.toolkit.fluxcd.io/prune: disabled
